--- a/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
+++ b/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
@@ -1,5 +1,5 @@
 ---
-title: Using Snowflake's Iceberg Tables with Spark and DuckDB to Save Costs
+title: Query Snowflake tables with DuckDB & Spark using Iceberg to Save Costs
 publishedAt: '2024-07-03'
 isPublished: true
 tags:
