--- a/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
+++ b/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
@@ -6,6 +6,7 @@ tags:
   - meta
 description: How Apache Iceberg is shaping the data warehouse world
 toc: false
+seoImage: /images/blog/universql/iceberg_logo.png
 ---
 
 As a big fan of data lake formats such as Apache Iceberg, when Snowflake [announced](https://docs.snowflake.com/en/release-notes/2024/other/2024-06-10-iceberg-tables) that Iceberg tables were in general availability, I wanted to investigate how I can utilise them for my workloads. 
