--- a/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
+++ b/content/blog/use-snowflake-and-duckdb-with-iceberg.mdx
@@ -4,7 +4,7 @@ publishedAt: '2024-07-03'
 isPublished: true
 tags:
   - meta
-description: How Apache Iceberg is shaping the data warehouse world
+description: Apache Iceberg is shaping the data warehouse world to be data lake centric. You can use Snowflake to ingest and query Iceberg tables but the integration enables you to use Clickhouse, DuckDB, Spark, BigQuery to be used in combination with Snowflake to save costs.
 toc: false
 seoImage: /images/blog/universql/iceberg_logo.png
 ---
