--- a/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
+++ b/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
@@ -60,7 +60,7 @@ Decoupling storage from compute is important because unless you have an anti-pat
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Databricks](/blog/part-1-compare-data-warehouse-pricing-model/#databricks)</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">DBU ($2.8 / hour)</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[DBU](https://www.databricks.com/product/pricing/databricks-sql) ($2.8 / hour)</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
     </tr>
   </tbody>
@@ -121,6 +121,7 @@ While it's serverless, Redshift charges you a minimum of 60 seconds when you sta
 AWS Athena is a Headless Data Warehouse, using Glue as Data Catalog and S3 as the data lake. 
 It charges you based on the data scanned for the query by default but you can use provisioned capacity to manage the workloads in a serverless way. The minimum cost is [$3.6](https://aws.amazon.com/athena/pricing/#SQL_queries_with_Provisioned_Capacity) per DPU per hour.
 
+
 ## Databricks
 
 Databricks uses the BYOC (Bring-your-cloud) model. 
@@ -143,8 +144,6 @@ Each query consumes the capacity defined for the project you have the reservatio
 
 ![Compare tables](/images/blog/dwh/bigquery_reservations.png)
 
-It's also worth that BigQuery is the only warehouse that supports both TBs scanned and hardware based pricing.
-
 
 ## Related Work
 
@@ -154,8 +153,8 @@ It's also worth that BigQuery is the only warehouse that supports both TBs scann
 ### So What?
 
 The pricing, storage is not much of a difference between the data warehouses. The compute cost is the most expensive part of the data warehouses. 
-The performance of the queries highly varies based on the workloads. 
-
+The performance of the queries highly varies based on the workloads and where the data is. 
+It's usually best to do discovery with all these solutions and pick the tech that your team thinks is the best.
 
 Next up, we are:
 
